Updated section 5 and bib

--- a/mybib.bib
+++ b/mybib.bib
@@ -653,3 +653,18 @@ keywords =    {structure  from motion, remove procedure call, web service},
   booktitle=cvpr,
   year={2013},
 }
+
+@inproceedings{Doersch13,
+  title = {Mid-Level Visual Element Discovery as Discriminative Mode Seeking},
+  author = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A.},
+  booktitle = nips,
+  year = {2013},
+}
+
+@InProceedings{Aubry14,
+   author = "Aubry, M. and Maturana, D. and Efros, A. and Russell, B. and Sivic, J. ",
+   title = "Seeing {3D} chairs: exemplar part-based {2D}-{3D} alignment
+using a large dataset of {CAD} models",
+   booktitle = cvpr,
+   year = "2014",
+} 
