--- a/tableResults01.tex
+++ b/tableResults01.tex
@@ -13,9 +13,9 @@
 		\rowcolor{maroon!10}
 		BOW & 29.4 & 35.7 & 47.0 & 57.1 & 66.5 & 8.7 & 11.0 & 17.3 & 22.8 & 25.4  \\
         \rowcolor{maroon!10}
-		BOW p-val  &&&&&|&&&&& \\
+		BOW p-val  & 29.8 &&&& | & & & & & \\
         \rowcolor{maroon!10}
-		BOW e-SVM &&&&&|&&&&& \\
+		BOW e-SVM & 31.8 & 38.7 & 49.7 & 60.2 & 69.4 | & & & & & \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
